--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                               </div>
                               <div class="col-md-2 wow fadeInUp" data-wow-delay="1.0s">
                                     <div class="team-member">
-                                          <div class="team-img team-one"></div>
+                                          <div class="team-img team-five"></div>
                                     </div>
                                     <div class="team-title">
                                           <h5>Santu</h5>
